@@ -124,7 +124,6 @@ inlead,	   0x45C750,	0x45EA70,	"Unit_ai_move_terraformer",			"void (__fastcall *
 define,	   0x4B1DC0,	0x4B8D50,	"City_requires_improvement_to_grow",		"int (__fastcall *) (City * this)"
 define,	   0x5C1AD0,	0x5D0670,	"Unit_can_perform_command",			"byte (__fastcall *) (Unit * this, int edx, int unit_command_value)"
 define,	   0x5B39D0,	0x5C2320,	"Unit_join_city",				"void (__fastcall *) (Unit * this, int edx, City * city)"
-inlead,	   0x452510,	0x454600,	"ai_move_defensive_unit",			"void (__fastcall *) (Unit * this)"
 define,	   0x5C0740,	0x5CF2E0,	"Unit_upgrade",					"Unit * (__fastcall *) (Unit * this, int edx, byte ignore_cost)"
 define,	   0x5C04D0,	0x5CF070,	"Unit_get_upgrade_cost",			"int (__fastcall *) (Unit * this)"
 define,	   0xCADC18,	0xCD0510,	"script_dot_txt_file_path",			"char *"
@@ -144,6 +143,7 @@ ignore,	   0xCAB2D8,	0xCCDB88,	"temp_str",					"char[4096]"
 ignore,	   0x5CCBB0,	0x0,		"Unit_can_pass_between",			"PassBetweenValidity (__fastcall *) (Unit * this, int edx, int from_x, int from_y, int to_x, int to_y, byte param_5)"
 ignore,	   0x441ED0,	0x0,		"Map_get_x_dist",				"int (__fastcall *) (Map * this, int edx, int x1, int x2)"
 ignore,	   0x437970,	0x0,		"Map_get_y_dist",				"int (__fastcall *) (Map * this, int edx, int y1, int y2)"
+ignore,	   0x452510,	0x454600,	"ai_move_defensive_unit",			"void (__fastcall *) (Unit * this)"
 
 inlead,	   0x5B5CD0,	0x5C4620,	"Unit_can_move_to_adjacent_tile",		"AdjacentMoveValidity (__fastcall *) (Unit * this, int edx, int neighbor_index, int param_2)"
 define,	   0x5F3F50,	0x603DD0,	"Map_compute_neighbor_index",			"int (__fastcall *) (Map * this, int edx, int x_home, int y_home, int x_neigh, int y_neigh, int lim)"
