@@ -1,5 +1,7 @@
 * TODO
-- Remove pop unit behavior from defensive strategy
+- Log new features
+- Reorganize README
+- Read perfumed building from config
 
 * RELEASE 7C
 - Stack fortify, upgrade, and disband
